add sidebar menu for helpers

--- a/addons-helper.html
+++ b/addons-helper.html
@@ -600,9 +600,21 @@
 
 								<ul id="subMenu3" class="u-sidebar-nav-menu u-sidebar-nav-menu--second-level" style="display: block;">
 									<li class="u-sidebar-nav-menu__item">
-										<a class="u-sidebar-nav-menu__link active" href="./blank.html">
+										<a class="u-sidebar-nav-menu__link" href="./blank.html">
 											<span class="u-sidebar-nav-menu__item-icon">B</span>
 											<span class="u-sidebar-nav-menu__item-title">Blank Page</span>
+										</a>
+									</li>
+									<li class="u-sidebar-nav-menu__item">
+										<a class="u-sidebar-nav-menu__link" href="./addons-helper.html">
+											<span class="u-sidebar-nav-menu__item-icon">A</span>
+											<span class="u-sidebar-nav-menu__item-title">Add Ons</span>
+										</a>
+									</li>
+									<li class="u-sidebar-nav-menu__item">
+										<a class="u-sidebar-nav-menu__link active" href="./addons-helper.html">
+											<span class="u-sidebar-nav-menu__item-icon">A</span>
+											<span class="u-sidebar-nav-menu__item-title">Add Ons</span>
 										</a>
 									</li>
 									<li class="u-sidebar-nav-menu__item">
