add sidebar menu for helpers

--- a/ui-typography.html
+++ b/ui-typography.html
@@ -620,6 +620,12 @@
 										</a>
 									</li>
 									<li class="u-sidebar-nav-menu__item">
+										<a class="u-sidebar-nav-menu__link" href="./addons-helper.html">
+											<span class="u-sidebar-nav-menu__item-icon">A</span>
+											<span class="u-sidebar-nav-menu__item-title">Add Ons</span>
+										</a>
+									</li>
+									<li class="u-sidebar-nav-menu__item">
 										<a class="u-sidebar-nav-menu__link" href="./404.html">
 											<span class="u-sidebar-nav-menu__item-icon">E</span>
 											<span class="u-sidebar-nav-menu__item-title">Error 404</span>
