revised title for addons helper pages

--- a/addons-helper.html
+++ b/addons-helper.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
 	<!-- Head -->
 	<head>
-		<title>Blank Page | Stream - Dashboard UI Kit - Add Ons Widget</title>
+		<title>Add Ons Helper | Stream - Dashboard UI Kit - Add Ons Widget</title>
 
 		<!-- Meta -->
 		<meta charset="utf-8">
