update sidebar and add linking to profile-alt pages

--- a/index.html
+++ b/index.html
@@ -613,6 +613,12 @@
 										</a>
 									</li>
 									<li class="u-sidebar-nav-menu__item">
+										<a class="u-sidebar-nav-menu__link" href="./profile-alt.html">
+											<span class="u-sidebar-nav-menu__item-icon">P</span>
+											<span class="u-sidebar-nav-menu__item-title">Profile Alt</span>
+										</a>
+									</li>
+									<li class="u-sidebar-nav-menu__item">
 										<a class="u-sidebar-nav-menu__link" href="./404.html">
 											<span class="u-sidebar-nav-menu__item-icon">E</span>
 											<span class="u-sidebar-nav-menu__item-title">Error 404</span>
