update sidebar and add linking to profile-alt pages

--- a/profile-alt.html
+++ b/profile-alt.html
@@ -606,9 +606,15 @@
 										</a>
 									</li>
 									<li class="u-sidebar-nav-menu__item">
-										<a class="u-sidebar-nav-menu__link active" href="./addons-helper.html">
+										<a class="u-sidebar-nav-menu__link" href="./addons-helper.html">
 											<span class="u-sidebar-nav-menu__item-icon">A</span>
 											<span class="u-sidebar-nav-menu__item-title">Add Ons</span>
+										</a>
+									</li>
+									<li class="u-sidebar-nav-menu__item">
+										<a class="u-sidebar-nav-menu__link active" href="./profile-alt.html">
+											<span class="u-sidebar-nav-menu__item-icon">P</span>
+											<span class="u-sidebar-nav-menu__item-title">Profile Alt</span>
 										</a>
 									</li>
 									<li class="u-sidebar-nav-menu__item">
